compiler/fir/analysis-tests/testData/resolveWithStdlib/properties/backingField/explicitBackingFieldInConstProperty.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: +ExplicitBackingFields

<!CONST_VAL_WITHOUT_INITIALIZER!>const<!> val p1: Any
    field = 42

/* GENERATED_FIR_TAGS: const, explicitBackingField, integerLiteral, propertyDeclaration, unsignedLiteral */
